--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,6 @@ jobs:
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: for f in $(nix-instantiate); echo $f; cat $f; done
+    - run: for f in $(nix-instantiate); do echo $f; cat $f; done
     - run: nix-build
     # - run: nix-shell --run "echo OK"
