--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: cachix/install-nix-action@v10
       with: 
         skip_adding_nixpkgs_channel: true
-    - run: nix-shell --run "niv update"
+    - run: GITHUB_PATH= nix-shell --run "niv update"
     - uses: cachix/cachix-action@v6
       with:
         name: cclaw
