--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.2
     - uses: cachix/install-nix-action@v11
-      with:
-        skip_adding_nixpkgs_channel: false
     - uses: cachix/cachix-action@v6
       with:
         name: cclaw
@@ -17,8 +15,8 @@ jobs:
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
-    - name: Show nixpkgs version
-      run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
+    # - name: Show nixpkgs version
+    #   run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
     # - run: for f in $(nix-instantiate); do echo $f; cat $f; done
     # - run: nix-build -A cclawStuff
     - name: Build nix packages
