--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,18 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.2
-    - uses: cachix/install-nix-action@v11
+    - uses: cachix/install-nix-action@v10
+      with:
+        skip_adding_nixpkgs_channel: true
     - uses: cachix/cachix-action@v6
       with:
         name: cclaw
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-
-    # - name: Show nixpkgs version
-    #   run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
-    # - run: for f in $(nix-instantiate); do echo $f; cat $f; done
-    # - run: nix-build -A cclawStuff
-    - name: Build nix packages
-      run: nix run -f . pkgs.nix-build-uncached -c nix-build-uncached default.nix -A cclawStuff
+    - run: for f in $(nix-instantiate); do echo $f; cat $f; done
+    - run: nix-build -A cclawStuff
     # - run: nix-shell --run "echo OK"
