--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,15 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.2
-    - uses: cachix/install-nix-action@v10
-      with:
-        skip_adding_nixpkgs_channel: true
+    - uses: cachix/install-nix-action@v11
     - uses: cachix/cachix-action@v6
       with:
         name: cclaw
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: for f in $(nix-instantiate); do echo $f; cat $f; done
+    #- run: for f in $(nix-instantiate); do echo $f; cat $f; done
     - run: nix-build -A cclawStuff
     # - run: nix-shell --run "echo OK"
