--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -1,5 +1,7 @@
 name: Update niv
 
+# TODO: https://github.com/DeterminateSystems/update-flake-lock
+
 on:
   # schedule:
   #   # every day at 5am UTC
