--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.2
+    - uses: actions/checkout@v3.5.2
     - uses: cachix/install-nix-action@v21
     - uses: cachix/cachix-action@v12
       with:
@@ -15,5 +15,5 @@ jobs:
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     #- run: for f in $(nix-instantiate); do echo $f; cat $f; done
-    - run: nix-build -A cclawStuff
+    - run: nix build .#gf-with-rgl .#pythonWithPGF
     # - run: nix-shell --run "echo OK"
